--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(211, 173, 224);
   }
   
   h1 {
-    color: rgb(223, 27, 174);
-    text-align: center;
+    color: rgb(227, 33, 188);
   }
-  
-  p {
-    color:rgb(227, 99, 178);    
+    .center {
+      text-align:center;
+  }
+    
+  .fonte-verde {
+      color:rgb(7, 125, 7);
+  }
+
+  #para {    
     font-family: verdana;
     font-size: 20px;
   }
