--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
 body {
-    background-color: rgb(211, 173, 224);
+    background-color: rgb(250, 151, 191);
   }
   
   h1 {
-    color: rgb(227, 33, 188);
+    color: rgb(227, 65, 140);
+    background-color:rgb(241, 130, 173) ;
+    border: 2px solid rgb(234, 103, 155);
   }
     .center {
       text-align:center;
   }
+  /*CLASS*/
+  .center{---
+
+  }
     
   .fonte-verde {
-      color:rgb(7, 125, 7);
+      color:black;
   }
-
+/*ID*/
   #para {    
     font-family: verdana;
     font-size: 20px;
