--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
-    background-color: rgb(250, 151, 191);
+  background-image: url("borboleta.jpg");
+    background-color: rgb(246, 158, 193);
   }
   
   h1 {
-    color: rgb(227, 65, 140);
-    background-color:rgb(241, 130, 173) ;
-    border: 2px solid rgb(234, 103, 155);
+    color: rgb(228, 79, 148);
+    background-color:rgb(251, 154, 191) ;
+    border: 2px solid rgb(238, 99, 155);
   }
     .center {
       text-align:center;
@@ -16,7 +17,11 @@ body {
   }
     
   .fonte-verde {
-      color:black;
+      color:purple;
+      border-style: solid;
+      border-width: 3px 3px;
+      background-color:rgb(251, 154, 191) ;
+      border-color: purple;
   }
 /*ID*/
   #para {    
